PLANET-4799 Add default cursor to counter text when editing

--- a/assets/src/styles/blocks/Counter.scss
+++ b/assets/src/styles/blocks/Counter.scss
@@ -4,6 +4,10 @@
   margin-top: $space-xl;
   margin-bottom: $space-xl;
 
+  &.editing .counter-text {
+    cursor: default;
+  }
+
   .page-section-description {
     white-space: pre-wrap;
   }
