PLANET-4801 Add tooltips to title and button

--- a/assets/src/styles/blocks/Articles.scss
+++ b/assets/src/styles/blocks/Articles.scss
@@ -187,3 +187,7 @@ div.btn-secondary.article-load-more.btn.btn-block {
     box-shadow: none;
   }
 }
+
+.articles-title-container {
+  width: fit-content;
+}
