--- a/templates/html-header.twig
+++ b/templates/html-header.twig
@@ -79,6 +79,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
 	<link rel="shortcut icon" type="image/ico" href="{{ theme.uri }}/favicon.ico"/>
+
+	{% if hreflang %}
+		<!-- hreflang metadata -->
+		<link rel="alternate" hreflang="x-default" href="https://www.greenpeace.org/international/">
+		{% for code, url in hreflang %}
+			<link rel="alternate" hreflang="{{ code }}" href="{{ url }}">
+		{% endfor %}
+	{% endif %}
+
+
 	{{ wp_head }}
 
 	{% if preconnect_domains %}
