PLANET-4801 Improve code after PR review

--- a/assets/src/styles/blocks/ArticlesEditor.scss
+++ b/assets/src/styles/blocks/ArticlesEditor.scss
@@ -1,3 +1,33 @@
 .ignore-categories-wrapper {
   margin-top: 10px;
 }
+
+.articles-editor {
+  div.btn-secondary.article-load-more.btn.btn-block {
+    &:hover,
+    &:focus,
+    &:active {
+      background-color: transparentize($white, .7);
+      border-color: $dark-blue;
+      color: $dark-blue;
+      box-shadow: none;
+    }
+  }
+
+  .articles-title-container {
+    width: fit-content;
+  }
+
+  a,
+  .article-list-item-image,
+  .top-page-tags .tag-item {
+    pointer-events: none;
+    cursor: default;
+  }
+
+  .article-list-item-date,
+  .article-list-item-author,
+  .article-list-item-content {
+    cursor: default;
+  }
+}
