--- a/src/layout/_footer.scss
+++ b/src/layout/_footer.scss
@@ -86,6 +86,11 @@
   margin-bottom: 32px;
   padding: 0;
 
+  .icon {
+    width: 2rem;
+    height: 2rem;
+  }
+
   @include small-and-up {
     font-size: $font-size-xxxl;
   }
@@ -119,6 +124,7 @@
 .footer-links,
 .footer-links-secondary {
   li {
+    line-height: 2rem;
     @include medium-and-up {
       display: inline-block;
 
@@ -182,6 +188,8 @@
   margin-left: auto;
   margin-right: auto;
   word-break: keep-all;
+  width: 80%;
+  padding: 0;
 
   @include medium-and-up {
     line-height: 1;
