--- a/assets/src/styles/blocks/ArticlesEditor.scss
+++ b/assets/src/styles/blocks/ArticlesEditor.scss
@@ -2,8 +2,20 @@
   margin-top: 10px;
 }
 
-.articles-editor {
-  div.btn-secondary.article-load-more.btn.btn-block {
+.editor-styles-wrapper {
+  .article-list-item-meta {
+    margin: 0;
+  }
+
+  .article-list-item-headline {
+    margin: 4px 0;
+  }
+
+  .article-list-item-content {
+    margin: 8px 0;
+  }
+
+  .article-load-more {
     &:hover,
     &:focus,
     &:active {
