PLANET-5294: Apply list typography to ordered lists

--- a/src/base/_typography.scss
+++ b/src/base/_typography.scss
@@ -16,7 +16,7 @@ html {
 //
 // Styleguide Style.typography.paragraphs
 p,
-ul li {
+li {
   hyphens: none;
   font-size: $font-size-sm;
   line-height: 1.6rem;
