PLANET-5343: Plastics theme: items should be center aligned

--- a/assets/src/styles/blocks/Columns.scss
+++ b/assets/src/styles/blocks/Columns.scss
@@ -432,7 +432,8 @@
     }
   }
 
-  &.block-style-image {
+  &.block-style-image,
+  &.block-style-tasks {
     .column-wrap {
       display: flex;
       flex-direction: column;
