--- a/assets/src/styles/campaigns/themes/_theme_plastic.scss
+++ b/assets/src/styles/campaigns/themes/_theme_plastic.scss
@@ -343,7 +343,7 @@ body.theme-plastic {
         height: 154px;
         width: 154px;
         line-height: 154px;
-        margin-bottom: 20px;
+        margin: 0 auto 20px auto;
 
         .step-number-inner {
           background-image: url("../../public/images/plastic/take-action.png");
@@ -359,6 +359,12 @@ body.theme-plastic {
           font-family: $montserrat;
           font-weight: $semi-bold;
           text-transform: none;
+        }
+      }
+
+      .steps-action {
+        .row > .col {
+          text-align: center;
         }
       }
     }
