PLANET-4803 Import forms stylesheet from styleguide for checkbox inputs

--- a/assets/src/styles/editorStyle.scss
+++ b/assets/src/styles/editorStyle.scss
@@ -16,6 +16,7 @@
 @import "styleguide/src/layout/navbar";
 @import "styleguide/src/layout/page-header";
 @import "styleguide/src/layout/breadcrumbs";
+@import "styleguide/src/layout/forms";
 
 @import "blocks/TableEditor";
 
