--- a/assets/src/styles/editorStyle.scss
+++ b/assets/src/styles/editorStyle.scss
@@ -29,6 +29,7 @@
 @import "blocks/GalleryEditor";
 @import "blocks/SplitTwoColumnsEditor";
 @import "blocks/SubmenuEditor";
+@import "blocks/HappypointEditor";
 
 @import "components/LayoutSelector";
 @import "components/EmptyMessage";
