--- a/src/base/_typography.scss
+++ b/src/base/_typography.scss
@@ -126,11 +126,26 @@ h6 {
 //
 // Styleguide Style.typography.links
 a {
-  color: $link-color;
+  color: var(--link--color, $link-color);
   text-decoration: none;
 
+  &.external-link {
+    .external-icon {
+      height: .55rem;
+      width: .55rem;
+      margin-left: .3rem;
+      margin-right: .4rem;
+
+      html[dir="rtl"] & {
+        margin-left: .4rem;
+        margin-right: .3rem;
+        transform: scaleX(-1);
+      }
+    }
+  }
+
   &:hover {
-    color: $link-hover-color;
+    color: var(--link-hover--color, $link-hover-color);
     text-decoration: underline;
   }
 }
