PLANET-5362 New styleguide + link color plastics

--- a/assets/src/styles/campaigns/themes/_theme_plastic.scss
+++ b/assets/src/styles/campaigns/themes/_theme_plastic.scss
@@ -1,3 +1,7 @@
+:root {
+  --link--color: #BD3DBD;
+  --link-hover--color: #963196;
+}
 body.theme-plastic {
   $montserrat: "Montserrat", sans-serif;
 
