PLANET-5344: Video block is displayed on top of other blocks in the editor
Ref: https://jira.greenpeace.org/browse/PLANET-5344

The iframe is ignoring the max-(height|width) properties of its parents.
- Added an `height` property to the figure so that the inner frame can base its own size on it.
- Reactivated P4 Media block in campaigns by fixing its name;

--- a/assets/src/styles/editorOverrides.scss
+++ b/assets/src/styles/editorOverrides.scss
@@ -213,3 +213,9 @@ input.describe[type=text][data-setting=caption] {
   font-size: 13px;
   color: red;
 }
+
+.wp-embed-responsive .block-editor {
+   .wp-block-embed.wp-has-aspect-ratio .wp-block-embed__wrapper::before {
+    content: none;
+  }
+}
