PLANET-5400: Articles block editor CSS rule scope is not specific enough
Ref: https://jira.greenpeace.org/browse/PLANET-5400

> A rule in the ArticlesEditor.scss file is not specific enough and applies to all `a` elements in the editor, causing various problems in other blocks.

Used a more specific selector based on block name.

--- a/assets/src/styles/blocks/ArticlesEditor.scss
+++ b/assets/src/styles/blocks/ArticlesEditor.scss
@@ -2,7 +2,7 @@
   margin-top: 10px;
 }
 
-.editor-styles-wrapper {
+.wp-block[data-type="planet4-blocks/articles"] {
   .article-list-item-meta {
     margin: 0;
   }
