Timeline WYSIWYG port.
This commit squashed:
* Prevent Timeline from updating when changing the description or title.
* Remove old shortcode references.
* Address feedback from PR review. Encapsulate Timeline node in its own component.
* Added debounce for the Sheet URL input.
* Add dangerouslySetInnerHTML to the description.
* Nicer warning for empty URL
* Remove Edit HTML option. Match defaults to PHP.
* Address review feedback.
* Moving hooks to components folder
* Minor improvements to the script and style loader hooks
* Add HTMLSidebarHelp component

--- a/assets/src/styles/editorStyle.scss
+++ b/assets/src/styles/editorStyle.scss
@@ -41,5 +41,6 @@
 @import "components/InlineFormFeedback";
 @import "components/ValidationMessage";
 @import "components/FormField";
+@import "components/HTMLSidebarHelp";
 
 @import "editorOverrides";
