--- a/templates/taxonomy.twig
+++ b/templates/taxonomy.twig
@@ -35,7 +35,12 @@
 						data-page="1"
 						data-total="{{ posts.pagination.total }}"
 						data-url="{{ fn('get_term_link', taxonomy.term_id ) }}"
-						class="load-more-mt btn btn-medium btn-small btn-secondary mb-5">{{ __( 'Load More', 'planet4-master-theme' ) }}</button>
+						class="load-more-mt btn btn-medium btn-small btn-secondary mb-5"
+						data-ga-category="Articles List"
+						data-ga-action="Load More Button"
+						data-ga-label="n/a">
+							{{ __( 'Load More', 'planet4-master-theme' ) }}
+					</button>
 				</div>
 			</div>
 		{% endif %}
