--- a/templates/author.twig
+++ b/templates/author.twig
@@ -53,7 +53,12 @@
 						data-page="1"
 						data-total="{{ posts.pagination.total }}"
 						data-url="{{ author.path }}"
-						class="load-more-mt btn btn-medium btn-small btn-secondary mb-5">{{ __( 'Load More', 'planet4-master-theme' ) }}</button>
+						class="load-more-mt btn btn-medium btn-small btn-secondary mb-5"
+						data-ga-category="Articles List"
+						data-ga-action="Load More Button"
+						data-ga-label="n/a">
+							{{ __( 'Load More', 'planet4-master-theme' ) }}
+					</button>
 				</div>
 			</div>
 		{% endif %}
