--- a/assets/src/styles/blocks/SplitTwoColumns.scss
+++ b/assets/src/styles/blocks/SplitTwoColumns.scss
@@ -241,14 +241,18 @@
 }
 
 .split-two-column-item-button {
-  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 
   @include large-and-up {
-    width: 70%;
+    white-space: nowrap;
+    min-width: 70%;
+    max-width: 85%;
   }
 
   @include x-large-and-up {
-    width: 60%;
+    min-width: 60%;
+    max-width: 70%;
   }
 }
 
