--- a/templates/base.twig
+++ b/templates/base.twig
@@ -11,7 +11,8 @@
 		<li><a href="#content">{{ __( 'Skip to Content', 'planet4-master-theme' ) }}</a></li>
 		<li><a href="#footer">{{ __( 'Skip to Footer', 'planet4-master-theme' ) }}</a></li>
 	</ul>
-
+	<a class="back-top d-none" title="{{ __('Go to the top of the page.', 'planet4-master-theme') }}"
+	   onclick="window.scrollTo({top: 0})"></a>
 	{% if google_tag_value %}
 		<!-- Google Tag Manager (noscript) -->
 		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ google_tag_value }}"
