PLANET-4800 Convert Gallery block to WYSIWYG

--- a/assets/src/styles/blocks/Gallery_carousel.scss
+++ b/assets/src/styles/blocks/Gallery_carousel.scss
@@ -153,6 +153,7 @@
       border: unset;
       background: $white;
       cursor: pointer;
+      list-style: none;
 
       @include small-and-up {
         width: 12px;
