--- a/templates/blocks/gallery.twig
+++ b/templates/blocks/gallery.twig
@@ -36,18 +36,12 @@
 						{% for key,single_image in images %}
 							<div class="carousel-item {% if key == 0 %}active{% endif %}">
 								<img
-									{% if ( loop.first ) %}
-										src="{{ single_image.image_src }}"
-									 	srcset="{{ single_image.image_srcset }}"
-									 	sizes="{{ single_image.image_sizes }}"
-									{% else %}
-										data-src="{{ single_image.image_src }}"
-									 	data-srcset="{{ single_image.image_srcset }}"
-									 	data-sizes="{{ single_image.image_sizes }}"
-										class="preload"
-									{% endif %}
-									 style="object-position: {{ single_image.focus_image }}"
-									 alt="{{ single_image.alt_text }}">
+									src="{{ single_image.image_src }}"
+									srcset="{{ single_image.image_srcset }}"
+									sizes="{{ single_image.image_sizes }}"
+									style="object-position: {{ single_image.focus_image }}"
+									loading="lazy"
+									alt="{{ single_image.alt_text }}">
 
 								{% if ( single_image.caption or single_image.credits ) %}
 									<div class="carousel-caption">
@@ -99,17 +93,11 @@
 								<div class="{{ ordinals[key] }}-column split-image">
 									{% if ( single_image.image_src ) %}
 										<img
-											{% if ( loop.first ) %}
-												src="{{ single_image.image_src }}"
-												srcset="{{ single_image.image_srcset }}"
-												sizes="{{ single_image.image_sizes }}"
-											{% else %}
-												data-src="{{ single_image.image_src }}"
-												data-srcset="{{ single_image.image_srcset }}"
-												data-sizes="{{ single_image.image_sizes }}"
-												class="lazyload"
-											{% endif %}
+											src="{{ single_image.image_src }}"
+											srcset="{{ single_image.image_srcset }}"
+											sizes="{{ single_image.image_sizes }}"
 											style="object-position:{{ single_image.focus_image }};"
+											loading="lazy"
 											alt="{{ single_image.alt_text }}" class="img_{{ post_type }}">
 									{% endif %}
 								</div>
@@ -141,13 +129,9 @@
 						{% for single_image in images %}
 							<div class="grid-item">
 								<img
-									{% if ( loop.first ) %}
-										src="{{ single_image.image_src }}"
-									{% else %}
-										data-src="{{ single_image.image_src }}"
-										class="lazyload"
-									{% endif %}
+									src="{{ single_image.image_src }}"
 									style="object-position: {{ single_image.focus_image }};"
+									loading="lazy"
 									alt="{{ single_image.alt_text }}">
 							</div>
 						{% endfor %}
