PLANET-4814: Convert EN Form block to WYSIWYG [skip ci]
Block conversion to WYIWYG

--- a/assets/src/styles/campaigns/themes/_theme_oceans.scss
+++ b/assets/src/styles/campaigns/themes/_theme_oceans.scss
@@ -296,11 +296,6 @@ body.theme-oceans {
   }
 
   .columns-block.block-style-no_image {
-    @include campaign_columns_style_no_image($montserrat, $oceans-blue, 400);
-
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-
     .column-wrap {
       .btn-primary {
         @extend .btn-primary;
@@ -332,6 +327,13 @@ body.theme-oceans {
         margin-bottom: 30px;
       }
     }
+  }
+
+  .columns-block.block-style-no_image {
+    @include campaign_columns_style_no_image($montserrat, $oceans-blue, 400);
+
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 
   .video-block {
