--- a/templates/blocks/old_covers.twig
+++ b/templates/blocks/old_covers.twig
@@ -10,7 +10,7 @@
 			{% set covers_view_class = 'show-all-covers' %}
 		{% endif %}
 
-		<section class="block covers-block take-action-covers-block {{ covers_view_class }}">
+		<section class="block covers-block {{ covers_view_class }}">
 			<div class="container">
 
 				{% if ( fields.title ) %}
