--- a/assets/src/styles/blocks/SplitTwoColumns.scss
+++ b/assets/src/styles/blocks/SplitTwoColumns.scss
@@ -78,7 +78,12 @@
     margin-bottom: 12px;
   }
 
+  @include large-and-up {
+    font-size: 4.125rem;
+  }
+
   @include x-large-and-up {
+    font-size: $font-size-xxl;
     margin-top: -.5em;
     margin-bottom: 20px;
   }
