--- a/templates/blocks/old_covers.twig
+++ b/templates/blocks/old_covers.twig
@@ -43,7 +43,7 @@
 												data-ga-label="n/a"
 												href="{{ tag.href|e('esc_url') }}"
 											>
-												#{{ tag.name|e('wp_kses_post')|raw }}
+												<span aria-label="hashtag">#</span>{{ tag.name|e('wp_kses_post')|raw }}
 											</a>
 										{% endfor %}
 									{% endif %}
