--- a/templates/single.twig
+++ b/templates/single.twig
@@ -48,7 +48,7 @@
 									data-ga-category="Header"
 									data-ga-action="Navigation Tag"
 									data-ga-label="n/a">
-									#{{ tag.name|e('wp_kses_post')|raw }}
+									<span aria-label="hashtag">#<span>{{ tag.name|e('wp_kses_post')|raw }}
 								</a>
 							{% endfor %}
 						</div>
