--- a/templates/sitemap.twig
+++ b/templates/sitemap.twig
@@ -20,7 +20,9 @@
 							{% if ( issue.campaigns ) %}
 								{% for campaign in issue.campaigns %}
 									<a class="tag-item" style="margin-left: 30px;"
-									   href="{{ campaign.link|default('#') }}">#{{ campaign.name|e('wp_kses_post')|raw }}</a>
+									   href="{{ campaign.link|default('#') }}">
+									   <span aria-label="hashtag">#</span>{{ campaign.name|e('wp_kses_post')|raw }}
+									</a>
 									<br/>
 								{% endfor %}
 							{% endif %}
