--- a/templates/tag.twig
+++ b/templates/tag.twig
@@ -15,7 +15,9 @@
 						<a class="tag-item tag-item--main" href="{{ category_link|default('#') }}">{{ category_name|e('wp_kses_post')|raw }}</a>
 					{% endif %}
 				</div>
-				<h1 class="page-header-title">#{{ tag_name|e('wp_kses_post')|raw }}</h1>
+				<h1 class="page-header-title">
+					<span aria-label="hashtag">#</span>{{ tag_name|e('wp_kses_post')|raw }}
+				</h1>
 				<div class="page-header-content">{{ tag_description|e('wp_kses_post')|raw }}</div>
 			</div>
 			<div class="pull-right d-none d-md-block">
