--- a/assets/src/scss/bootstrap-build.scss
+++ b/assets/src/scss/bootstrap-build.scss
@@ -37,7 +37,7 @@ Text Domain: planet4-master-theme
 // @import "~bootstrap/scss/_breadcrumb.scss";
 // @import "~bootstrap/scss/_button-group.scss";
 // @import "~bootstrap/scss/_buttons.scss";
-// @import "~bootstrap/scss/_card.scss";
+@import "~bootstrap/scss/_card.scss";
 @import "~bootstrap/scss/_carousel.scss";
 // @import "~bootstrap/scss/_close.scss";
 // @import "~bootstrap/scss/_code.scss";
@@ -63,6 +63,6 @@ Text Domain: planet4-master-theme
 // @import "~bootstrap/scss/_root.scss";
 // @import "~bootstrap/scss/_tables.scss";
 // @import "~bootstrap/scss/_tooltip.scss";
-// @import "~bootstrap/scss/_transitions.scss";
+@import "~bootstrap/scss/_transitions.scss";
 @import "~bootstrap/scss/_type.scss";
 @import "~bootstrap/scss/_utilities.scss";
