--- a/templates/html-header.twig
+++ b/templates/html-header.twig
@@ -79,6 +79,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
 	<link rel="shortcut icon" type="image/ico" href="{{ theme.uri }}/favicon.ico"/>
+	<link rel="preload" as="style" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap"/>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap"/>
+	<link rel="preload" as="style" href="https://fonts.googleapis.com/css?family=Lora:400,400i,700&subset=latin-ext&display=swap"/>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,400i,700&subset=latin-ext&display=swap"/>
 
 	{% if hreflang %}
 		<!-- hreflang metadata -->
