PLANET-5373 Remove the "by" string in post details page and taxonomy details page

--- a/templates/tease-taxonomy-post.twig
+++ b/templates/tease-taxonomy-post.twig
@@ -47,7 +47,7 @@
 
 		<div class="search-result-item-info">
 			{% if ( post.author ) %}
-				<span class="search-result-item-author">{{ __( 'by', 'planet4-master-theme' ) }}
+				<span class="search-result-item-author">
 					{% if not ( post.get_author_override ) %}
 						<a href="{{ post.author.path }}">{{ post.author }}</a>
 					{% else %}
