--- a/assets/src/styles/campaigns/themes/_theme_oceans.scss
+++ b/assets/src/styles/campaigns/themes/_theme_oceans.scss
@@ -190,7 +190,7 @@ body.theme-oceans {
   } // end .articles-block
 
   .carousel-wrap {
-    @include campaign_carousel(false, $oceans-aqua, white, white, $oceans-blue, url("../../public/images/oceans/carousel-arrow.svg"), 50px, 10px);
+    @include campaign_carousel(false, white, $oceans-blue, url("../../public/images/oceans/carousel-arrow.svg"), 50px, 10px);
 
     .carousel-indicators li {
       border-radius: 50%;
