PLANET-5465 Remove important to fix campaign pages

--- a/src/layout/_page-header.scss
+++ b/src/layout/_page-header.scss
@@ -84,7 +84,7 @@
 
   &.page-header-hidden {
     padding: 0 !important;
-    margin: 0 !important;
+    margin: 0;
   }
 
   .container > *:not(.row) {
