PLANET-5501 Update button styles

--- a/src/base/_colors.scss
+++ b/src/base/_colors.scss
@@ -76,9 +76,9 @@ $yellow-20: #fff6cd;
 // $orange-active - #cd4525;
 //
 // Styleguide Style.colors.orange
-$orange: #f36d3a;
+$orange: #f36b35;
 $orange-hover: #ee562d;
-$orange-active: #cd4525;
+$orange-active: #dd4a22;
 
 // Various greens:
 $eden:              #0f6459;
@@ -88,7 +88,7 @@ $inch-worm:         #a7e021;
 // Various blues:
 $x-dark-blue:  #042233;
 $dark-blue:    #074365;
-$active-blue:  #01223d;
+$active-blue:  #05324c;
 $spray:        #86eee7;
 $aquamarine:   #68dfde;
 $java:         #1bb6d6;
