--- a/src/components/_buttons.scss
+++ b/src/components/_buttons.scss
@@ -18,10 +18,10 @@
   font-size: 1rem;
   text-align: center;
   text-decoration: none;
-  text-transform: uppercase;
+  text-transform: capitalize;
   color: $white;
-  font-weight: 500;
-  border-radius: 0;
+  font-weight: bold;
+  border-radius: 4px;
   border: 1px solid transparent;
   cursor: pointer;
   line-height: 3;
@@ -171,7 +171,6 @@
   margin: 0;
   padding: 2px $n30;
   box-shadow: 0 2px 5px rgba(0, 0, 0, .25);
-  transition: color background-color font-weight 100ms;
 
   &:hover,
   &:focus {
